infra/k8s/common/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg             # Class name
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
